# core1_bt_server

./: README.md
core1_bt_action/: CMakeLists.txt  package.xml
core1_bt_action/action/: TargetPose.action
core1_bt_server_py/: package.xml  setup.cfg  setup.py
core1_bt_server_py/core1_bt_server_py/: shoot_server.py  tar_server.py
core1_bt_server_py/example_client/: tar_client.py  tar_client_gui.py
